--- a/package.json
+++ b/package.json
@@ -33,7 +33,10 @@
     "@angular/platform-browser": "2.2.0",
     "@angular/platform-browser-dynamic": "2.2.0",
     "@angular/router": "3.2.0",
+    "@ng-bootstrap/ng-bootstrap": "^1.0.0-alpha.10",
+    "bootstrap": "^4.0.0-alpha.5",
     "core-js": "^2.4.1",
+    "localStorage": "^1.0.3",
     "reflect-metadata": "^0.1.3",
     "rxjs": "5.0.0-beta.12",
     "zone.js": "^0.6.25"
