--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "bootstrap": "^4.0.0-alpha.5",
     "core-js": "^2.4.1",
     "localStorage": "^1.0.3",
+    "ng2-completer": "^0.3.1",
     "reflect-metadata": "^0.1.3",
     "rxjs": "5.0.0-beta.12",
     "zone.js": "^0.6.25"
